# lele-tools

./: .env.example  .env.台式机  .env.联想笔记本  .gitignore  CLAUDE.md  CMakeLists.txt  Crontab工具功能实现总结.md  HTTP状态码功能完善总结.md  LICENSE  README.md  README_GITHUB_ACTIONS_FIX.md  README_INTERNATIONALIZATION.md  README_USAGE_TRACKING.md  TERMINAL_TOOL_SETUP.md  fix_installer.ps1  main.cpp  my.qrc  管理不同的环境变量.md
.claude/: settings.local.json
.cursor/rules/: basic-rules.mdc
.github/workflows/: README.md  build-and-release.yml  ci.yml  manual-build.yml  test-qt-modules.yml
cmake/: FindLibSSH.cmake  FindMySQL.cmake  FindOpenCV.cmake  FindPcap.cmake  FindRedis.cmake  FindRedisPlus.cmake  LoadEnvironment.cmake  opencv-integration-example.cmake
common/: CurrentLineHighlighter.h  colorbutton.cpp  colorbutton.h  customtablewidget.cpp  customtablewidget.h  customtabwidget.cpp  customtabwidget.h  dynamicobjectbase.cpp  dynamicobjectbase.h  global-styles.cpp  global-styles.h  logger.cpp  logger.h  toolusagetracker.cpp  toolusagetracker.h
common/admin-utils/: adminprivilegehelper.cpp  adminprivilegehelper.h
common/connx/: AbstractNodeEvent.h  Connection.cpp  Connection.h  MySQLConnection.cpp  MySQLConnection.h  RedisConnection.cpp  RedisConnection.h
common/datetime-utils/: datetimeutils.cpp  datetimeutils.h
common/delegate/: ComboBoxEditDelegate.cpp  ComboBoxEditDelegate.h  MyItemEditDelegate.h
common/sqlite/: ConnectionConfigTableManager.cpp  ConnectionConfigTableManager.h  SqliteManager.cpp  SqliteManager.h  TableManager.cpp  TableManager.h
common/string-utils/: stringutils.cpp  stringutils.h
common/validator/: myintvalidator.cpp  myintvalidator.h
docs/: FindPcap-Usage.md  GitHub-Actions-Cache-Guide.md  REDIS_SETUP.md  cross-platform-issues.md  custom-tabbar-usage.md  internationalization.md  opencv-integration.md
main-widget/: aboutdialog.cpp  aboutdialog.h  customtabbar.cpp  customtabbar.h  customtabwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowtabwidget.cpp  mainwindowtabwidget.h  toolhelp.cpp  toolhelp.h
modules/admin-rights-tool/: adminrightstool.cpp  adminrightstool.h
modules/barcode-gen/: barcodegen.cpp  barcodegen.h
modules/base-convert/: baseconvert.cpp  baseconvert.h
modules/base64-encode-decode/: base64encodedecode.cpp  base64encodedecode.h
modules/blood-type-tool/: bloodtypetool.cpp  bloodtypetool.h
modules/calculator/: calculator.cpp  calculator.h
modules/camera-tool/: README.md  cameratool.cpp  cameratool.h
modules/character-counter/: charactercounter.cpp  charactercounter.h
modules/chinese-copybook/: README.md  chinesecopybook.cpp  chinesecopybook.h
modules/color-tools/: colortools.cpp  colortools.h
modules/crontab-time-calculation/: crontabtimecalculation.cpp  crontabtimecalculation.h
modules/database-tool/: abstractnodeevent.h  connectiondialog.cpp  connectiondialog.h  createdialog.cpp  createdialog.h  databasetool.cpp  databasetool.h  databasetreemodel.cpp  databasetreemodel.h  databasetreeview.cpp  databasetreeview.h  mysqlexpandevent.h  nodeeventfactory.h  querytab.cpp  querytab.h  redisexpandevent.h  tabledesigner.cpp  tabledesigner.h
modules/date-time-calculator/: datetimecalculator.cpp  datetimecalculator.h
modules/date-time-util/: datetimeutil.cpp  datetimeutil.h
modules/db-compare/: dbcompare.cpp  dbcompare.h
modules/favicon-production/: faviconproduction.cpp  faviconproduction.h
modules/file-compare-tool/: filecomparetool.cpp  filecomparetool.h
modules/file-hash-calculation/: filehashcalculation.cpp  filehashcalculation.h
modules/file-search/: filesearch.cpp  filesearch.h
modules/ftp-client/: README.md  ftpclient.cpp  ftpclient.h
modules/ftp-server/: README.md  ftpserver.cpp  ftpserver.h
modules/hosts-editor/: hostseditor.cpp  hostseditor.h
modules/hosts-editor-table/: hostseditortable.cpp  hostseditortable.h
modules/hosts-editor-text/: hostseditortext.cpp  hostseditortext.h
modules/html-special-character-table/: htmlspecialcharactertable.cpp  htmlspecialcharactertable.h
modules/http-client/: httpclient.cpp  httpclient.h  httprequeststore.cpp  httprequeststore.h
modules/http-status-code/: httpstatuscode.cpp  httpstatuscode.h
modules/image-base64-encoding/: imagebase64encoding.cpp  imagebase64encoding.h
modules/image-collection/: imagecollection.cpp  imagecollection.h
modules/image-compression/: imagecompression.cpp  imagecompression.h
modules/image-format-conversion/: imageformatconversion.cpp  imageformatconversion.h
modules/image-text-recognition/: imagetextrecognition.cpp  imagetextrecognition.h  paddle_service.py
modules/image-watermark/: imagewatermark.cpp  imagewatermark.h
modules/images-to-pdf/: imagestopdf.cpp  imagestopdf.h
modules/ip-lookup-tool/: iplookuptool.cpp  iplookuptool.h
modules/json-formatter/: jsonformatter.cpp  jsonformatter.h  jsonformatter.ui
modules/key-remapper/: keyremapper.cpp  keyremapper.h
modules/markdown-editor/: markdowneditor.cpp  markdowneditor.h
modules/markdown-to-long-image/: markdowntolongimage.cpp  markdowntolongimage.h
modules/markdown-to-pdf/: markdowntopdf.cpp  markdowntopdf.h  pdfoutlineinjector.cpp  pdfoutlineinjector.h
modules/media-manager/: mediamanager.cpp  mediamanager.h
modules/mobile-location/: mobilelocation.cpp  mobilelocation.h
modules/notepad/: notepad.cpp  (+1 more)
resources/: app-icon-basic.py  create-ico.py  create-icons.py  create-tool-icon.py  generate-basic-icons.py  index.html  simple-icon-generator.py
script/: build-with-sql.ps1  build.ps1  build_screencapture_only.ps1  build_simple.ps1  easy_i18n.ps1  fix_installer.ps1  generate_translations.ps1  rebuild-with-terminal.ps1  update_translations.ps1
scripts/: test-cache-performance.ps1
tool-list/: module-meta-data.h  module-meta.h  toollist.cpp  toollist.h  toollist.ui
translations/: lele-tools_en_US.ts  lele-tools_zh_CN.ts
website/: faq.md  features.md  index.md  install.md  package.json  pnpm-lock.yaml
z-doc/: README.md  cache-management-tools.md  cache-optimization-guide.md  cache-troubleshooting.md  github-actions-cache-mechanism.md
(+106 files in other folders)
